--- a/index.html
+++ b/index.html
@@ -11,18 +11,30 @@
 
 
 <body>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="toptext jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-5">EMA</h1>
                 <p class="lead">Ecological Momentary Assessment. <br> 
-                press start, then record reactions by clicking corresponding buttons.
+                enter required IDs, press start, then record reactions by clicking corresponding buttons.
                 <br>
                 when finished, press stop, then press download to export recorded data in csv
                 </p>
             </div>
     </div>
 
+
+
     <div id="centerStuff" class="container container-fluid ">
+        <form class="justify-content-center">
+            <div class="form-group">
+                <label for="partID">Participant ID</label>
+                <input type="text" class="form-control" id="partID" placeholder="participant id here">
+            </div>
+            <div class="form-group">
+                <label for="courseID">Course ID</label>
+                <input type="text" class="form-control" id="courseID" placeholder="course id here">
+            </div>
+        </form>
         <div id="controlButtons"class="d-flex justify-content-center flex-wrap">
             <button id="btnStart" name="Start" type="button" class="btn btn-outline-success m-1">Start</button>
             <button id="btnStop" name="Stop" type="button" class="btn btn-outline-danger m-1">Stop</button>
@@ -40,6 +52,32 @@
             <button name="Neutral" id="btnNeut" type="button" class="btn btn-outline-dark btn-lg custBtn">Neutral</button>
         </div>
     </div>
+
+    <div class="botspacer my-5">
+
+    </div>
+
+    <div class="modal fade" id="requiredModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLongTitle">Enter Required Fields</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                Participant ID and Course ID are required to continue
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="index.js"></script>
 </html>
