made changes to intro

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p class="lead">Thank you for participating in our study! <br> 
                 Please enter your course number and the participant ID assigned to you before you begin. 
                 <br>
-                Please press start when the class started. You can click on the button that best represent the emotions you are feeling at the time. Please press stop when the class ended. Then press download to export recorded data in csv.
+                Please press start when the class started. To record your emotion, you can click on the button that best represent the emotions you are feeling at the time. Please press stop when the class ended. Then press download to export recorded data in csv.
                 </p>
             </div>
     </div>
