added distracted btn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>EMA</title>
 </head>
 
-
 <body>
     <div class="toptext jumbotron jumbotron-fluid">
             <div class="container">
@@ -21,8 +20,6 @@
                 </p>
             </div>
     </div>
-
-
 
     <div id="centerStuff" class="container container-fluid ">
         <form class="justify-content-center">
@@ -50,6 +47,7 @@
             <button name="Confused" id="btnConf" type="button" class="btn btn-outline-dark btn-lg custBtn">Confused</button>
             <button name="Surprised" id="btnSupr" type="button" class="btn btn-outline-dark btn-lg custBtn">Surprised</button>
             <button name="Neutral" id="btnNeut" type="button" class="btn btn-outline-dark btn-lg custBtn">Neutral</button>
+            <button name="Distracted" id="btnDist" type="button" class="btn btn-outline-dark btn-lg custBtn">Distracted</button>
         </div>
     </div>
 
